--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "lucia": "^3.2.2",
     "lucide-react": "^0.526.0",
     "next": "15.4.1",
+    "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7"
