--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "lucia": "^3.2.2",
     "lucide-react": "^0.526.0",
+    "nanoid": "^5.1.5",
     "next": "15.4.1",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
